use spring config and validation (#601)
* use spring config and validation

* add step to workflow to compare files

* @Profile cannot be test

* Sonar suggestions